[client] Improve logging in client metacache

As part for impala crashing issue KUDU-3461 (caused due to PickLeader
getting called recursively for indefinite iterations until stack
overflow happens), some extra logs are added to aid in debugging for
future issues that may reside in the code path mentioned above.

Change-Id: I2a47f643307ef47a98b1d3481b4c03834fa239d4
Reviewed-on: http://gerrit.cloudera.org:8080/19653
Tested-by: Kudu Jenkins
Reviewed-by: Yingchun Lai <laiyingchun@apache.org>
Reviewed-by: Abhishek Chennaka <achennaka@cloudera.com>